--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-
-src/__pycache__/img_download.cpython-39.pyc
-src/__pycache__/variables.cpython-39.pyc
+__pycache__
+src/__pycache__
+photos
+*.zip
